# dxcap

./: .gitignore  .gitmodules  CMakeLists.txt
app/: 3dparty.h  exception.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h
